--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="container">
         <h1>My First Website</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quos ipsa dolorum neque ad tempora iste ipsam id ea sequi itaque ipsum dolorem sed, reprehenderit voluptates sit, totam, quas hic.</p>
+        <p>Hello World</p>
     </div>
 </body>
 </html>
