--- a/index.html
+++ b/index.html
@@ -10,6 +10,74 @@
         <h1>My First Website</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quos ipsa dolorum neque ad tempora iste ipsam id ea sequi itaque ipsum dolorem sed, reprehenderit voluptates sit, totam, quas hic.</p>
         <p>Hello World</p>
+
+        // div.unordered>ul>li*5   shortcut
+        <div class="unorderd">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+
+
+        //TABLE 
+        // table 5 rows 4 cols
+        //tr - row 
+        //td or th cols
+        // td or th in inside tr
+        // th head?? 
+        // th naka bold at naka center
+
+        //div.table>table>thead>tr>th*4^^tbody>tr*4>td*4  shortcut 
+        <div class="table">
+            <table>
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+
     </div>
+
+
+
+
+
+
 </body>
 </html>
