--- a/index.html
+++ b/index.html
@@ -3,81 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Website</title>
+    <title>Rosales' Resume</title>
 </head>
 <body>
-    <div class="container">
-        <h1>My First Website</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quos ipsa dolorum neque ad tempora iste ipsam id ea sequi itaque ipsum dolorem sed, reprehenderit voluptates sit, totam, quas hic.</p>
-        <p>Hello World</p>
 
-        // div.unordered>ul>li*5   shortcut
-        <div class="unorderd">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
-
-
-        //TABLE 
-        // table 5 rows 4 cols
-        //tr - row 
-        //td or th cols
-        // td or th in inside tr
-        // th head?? 
-        // th naka bold at naka center
-
-        //div.table>table>thead>tr>th*4^^tbody>tr*4>td*4  shortcut 
-        <div class="table">
-            <table>
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-
+    <div class="profile">
+        <h1>Erela Gavrielle Alday Rosales</h1>
+        <h3>Profile</h3>
+        <a>An FEU Tech student studying BSITAGD motivated to learn new things that can help in the near future and earn experience in today's work environment.</a>
+        <h3>Telephone : 09397235834</h3> <h3>Email : 202411030@fit.edu.ph</h3>
     </div>
 
-
-
-
-
+    <div class="education">
+        
+    </div>
 
 </body>
 </html>
