checking the changes

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <br> <br>
 
         <label for="address">Home Address<a>*</a></label><br>
-        <input type="address" name="streetAddress" class="streetAddress" id="streetAddress" placeholder="Street Address*" required>
-        <input type="address" name="cityAddress" class="cityAddress" id="cityAddress" placeholder="City*" required>
-        <input type="address" name="provinceAddress" class="provinceAddress" id="provinceAddress" placeholder="Province*" required>
-        <input type="address" name="countryAddress" class="countryAddress" id="countryAddress" placeholder="Country*" required>
-        <input type="address" name="ZIPcode" class="ZIPcode" id="ZIPcode" placeholder="ZIP Code*" required>
+        <input type="text" name="streetAddress" class="streetAddress" id="streetAddress" placeholder="Street Address*" required>
+        <input type="text" name="cityAddress" class="cityAddress" id="cityAddress" placeholder="City*" required>
+        <input type="text" name="provinceAddress" class="provinceAddress" id="provinceAddress" placeholder="Province*" required>
+        <input type="text" name="countryAddress" class="countryAddress" id="countryAddress" placeholder="Country*" required>
+        <input type="text" name="ZIPcode" class="ZIPcode" id="ZIPcode" placeholder="ZIP Code*" required>
         <br> <br>
 
         <label for="position" id="positionLabel">Job Title<a>*</a></label> 
