--- a/S2_Rosales.html
+++ b/S2_Rosales.html
@@ -12,79 +12,109 @@
     <link rel="stylesheet" href="S2_Rosales.css">
 </head>
 
-<body>
+<body class="container my-5">
+    <header>
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <img src="profile.jpg" height="250" width="250" alt="Erela Gavrielle's Picture"
+                    class="img-fluid rounded">
+            </div>
+            <div class="col-md-8">
+                <h1><strong>Erela Gavrielle Alday Rosales</strong></h1>
+                <p>An FEU Tech student studying BSITAGD, motivated to learn and gain experience in today's work
+                    environment.</p>
+                <p><strong>Telephone:</strong> +63 9397235834</p>
+                <p><strong>Email:</strong> <a href="mailto:202411030@fit.edu.ph">202411030@fit.edu.ph</a></p>
+            </div>
+        </div>
+    </header>
 
-    <div class="profilePicture">
-        <img src="profile.jpg" alt="Erela Gavrielle's Picture">
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h3><strong>Education</strong></h3>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Year</th>
+                        <th>School</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2024 - current</td>
+                        <td>FEU Tech</td>
+                    </tr>
+                    <tr>
+                        <td>2016 - 2020</td>
+                        <td>De La Salle Lipa</td>
+                    </tr>
+                    <tr>
+                        <td>2014 - 2016</td>
+                        <td>De La Salle Lipa</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-md-6">
+            <h3><strong>SKill Set</strong></h3>
+            <ul>
+                <li>Creative</li>
+                <li>Organized</li>
+                <li>Flexible</li>
+                <li>Responsible</li>
+                <li>Patient</li>
+            </ul>
+        </div>
     </div>
-    <div class="profile">
-        <h1>Erela Gavrielle Alday Rosales</h1>
-        <h3>Profile</h3>
-        <a>An FEU Tech student studying BSITAGD motivated to learn new things that can help in the near future and earn
-            experience in today's work environment.</a>
-        <h3>Telephone : +63 9397235834</h3>
-        <h3>Email : 202411030@fit.edu.ph</h3>
-    </div>
 
-    <div class="education">
-        <table>
-            <thead>
-                <tr>
-                    <th>Year</th>
-                    <th>School</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>2014 - 2016</td>
-                    <td>De La Salle Lipa</td>
-                </tr>
-                <tr>
-                    <td>2016 - 2020</td>
-                    <td>De La Salle Lipa</td>
-                </tr>
-                <tr>
-                    <td>2024 - current</td>
-                    <td>FEU Tech</td>
-                </tr>
-            </tbody>
-        </table>
+    <hr>
 
-    </div>
-
-    <div class="skills">
-        <h3>Skills</h3>
+    <div>
+        <h3><strong>Experience</strong></h3>
         <ul>
-            <li>Creative</li>
-            <li>Organized</li>
-            <li>Flexible</li>
-            <li>Responsible</li>
-            <li>Patient</li>
+            <li>
+                Volunteered for an e-games event hosted by Ignis
+                <ul>
+                    <li>2019 - De La Salle Lipa</li>
+                    <li>Spectated players of the event</li>
+                    <li>Accepted tickets from participants entering the venue</li>
+                </ul>
+            </li>
+            <li>
+                Baking and cooking classes
+                <ul>
+                    <li>2016-2018 - De La Salle Lipa</li>
+                    <li>Researched recipes and prepared in groups</li>
+                    <li>Had rotating roles for teamwork</li>
+                </ul>
+            </li>
         </ul>
     </div>
 
-    <div class="experience">
-        <ul>
-            <li>Volunteered for an e-games event hosted by Ignis during senior high school with peers</li>
-            <ul>
-                <li>2019 De La Salle Lipa</li>
-                <li>Spectated players of the event</li>
-                <li>Accepted tickets from participants entering the venue</li>
-            </ul>
+    <hr>
 
-            <li>Had baking and cooking classes in groups</li>
+    <div class="row">
+        <div class="col-md-8">
+            <p><strong>Portfolio Preview</strong> (optional multimedia goes here)</p>
+        </div>
+
+        <div class="col-md-4">
+            <h3>Attachments</h3>
             <ul>
-                <li>2016-2018 De La Salle Lipa</li>
-                <li>Researched recipes and discussed with groupmates what to prepare</li>
-                <li>With assigned roles that change once in a while</li>
+                <li><a href="https://github.com/GavrielleRosales">GavrielleRosales</a></li>
+                <li><a href="#">Lorem ipsum dolor sit (Image)</a></li>
+                <li><a href="#">Lorem ipsum dolor (Video)</a></li>
             </ul>
-        </ul>
+        </div>
     </div>
 
-    <div class="references">
-        <h3>References : </h3>
-        <a>References available on request.</a>
-    </div>
+    <footer class="mt-4">
+        <h4><strong>References</strong></h4>
+        <p>Available upon request.</p>
+    </footer>
 </body>
 
 </html>
