--- a/S2_Rosales.html
+++ b/S2_Rosales.html
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="col-md-6">
             <h3><strong>Education</strong></h3>
-            <table class="table table-bordered">
+            <table class="table table-bordered" id="tableed">
                 <thead>
                     <tr>
                         <th>Year</th>
@@ -59,7 +59,7 @@
         </div>
 
         <div class="col-md-6">
-            <h3><strong>SKill Set</strong></h3>
+            <h3><strong>Skill Set</strong></h3>
             <ul>
                 <li>Creative</li>
                 <li>Organized</li>
@@ -72,7 +72,9 @@
 
     <hr>
 
-    <div>
+    <div class="row"> 
+        
+        <div class="col-md-6">
         <h3><strong>Experience</strong></h3>
         <ul>
             <li>
@@ -92,24 +94,19 @@
                 </ul>
             </li>
         </ul>
+        </div>
+        <div class="col-md-6">
+            <h3><strong>Account Links</strong></h3>
+            <ul>
+                <li><a href="https://github.com/GavrielleRosales">GitHub : GavrielleRosales</a></li>
+                <li><a href="https://www.instagram.com/eavrielleee">IG : eavrielleee</a></li>
+                <li><a href="https://web.facebook.com/GavrielleErelaRosales">FB : Gavrielle Erela Rosales</a></li>
+            </ul>
+        </div>
+
     </div>
 
     <hr>
-
-    <div class="row">
-        <div class="col-md-8">
-            <p><strong>Portfolio Preview</strong> (optional multimedia goes here)</p>
-        </div>
-
-        <div class="col-md-4">
-            <h3>Attachments</h3>
-            <ul>
-                <li><a href="https://github.com/GavrielleRosales">GavrielleRosales</a></li>
-                <li><a href="#">Lorem ipsum dolor sit (Image)</a></li>
-                <li><a href="#">Lorem ipsum dolor (Video)</a></li>
-            </ul>
-        </div>
-    </div>
 
     <footer class="mt-4">
         <h4><strong>References</strong></h4>
