--- a/WebDesignRosales_Lab/MainPage.html
+++ b/WebDesignRosales_Lab/MainPage.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>Main Page</title>
     <style>
         body {
@@ -14,12 +16,67 @@
             font-size: x-large;
             font-family: monospace;
         }
+        h1 {
+            text-align: center;
+            font-weight: bold;
+            font-weight: 500px;
+        }
+        #container {
+            position: relative;
+            width: 50%;
+        }
+        .image {
+            opacity: 1;
+            width: 50%;
+            height: auto;
+            transition: .5s ease;
+            backface-visibility: hidden;
+        }
+        .middle {
+            transition: .5s ease;
+            opacity: 0;
+            position: absolute;
+            top: 25%;
+            left: 25%;
+            transform: translate(-50%,-50%);
+            -ms-transform: translate(-50%,-50%);
+        }
+        #container:hover .image {
+            opacity: 0.3;
+        }
+        #container:hover .middle {
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
-    <h1>My Friends</h1>
-    <a href="Shan_external.html" class="name">Shan</a>
-    <a href="Ces_internal.html" class="name">Ces</a>    
-    <a href="Lemis_inline.html"class="name" >Lemies</a>
+    <h1>MY FRIENDS</h1>
+
+<div class="row">
+
+    <div class="col-md-4" id="container">
+        <img src="shan_button.jpeg" alt="Shan" class="image" style="width: 50%;">
+        <div class="middle">
+            <div class="text"><a href="Shan_external.html">Shan</a></div>
+        </div>
+    </div>
+
+    <div class="col-md-4" id="container">
+        <img src="cesca_button.jpeg" alt="Shan" class="image" style="width: 50%;">
+        <div class="middle">
+            <div class="text"><a href="Ces_internal.html">Ces</a></div>
+        </div>
+    </div>
+
+
+    <div class="col-md-4" id="container">
+        <img src="lemis_button.jpeg" alt="Shan" class="image" style="width: 50%;">
+        <div class="middle">
+            <div class="text"><a href="Lemis_inline.html">Lemies</a></div>
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
